# note_0302

./: .gitignore  .gitmodules  LICENSE  README.md
CP/: README.md  main.py  pyproject.toml  编译原理.md
CP/NOTE/: 0922.md  0924.md  0929.md  1011.md  1015.md  1022.md
CP/NOTE/sub/: 上下文无关文法.md
CP/lab1/: LL1table.json  NFA2DFA_mini.py  README.md  draw_merged_NFA.py  draw_tree.py  min_dfa.json  minimized_DFA.json  report.md  test_code.txt
CP/lab1/dfa_lexer/: Cargo.toml  LL1table_loaded.txt  ast.json  output.txt
DB/: README.md
DB/NOTE/: 0923.md  0928.md  0930.md  1014.md
DB/hw/: .gitignore  Cargo.toml  README.md  clear.sql  create.sql  er.drawio  init.sql
DB/hw/ojdb-frontend/: .gitignore  .pnp.cjs  README.md  package-lock.json  package.json
DB/hw/ojdb-frontend/src/: App.vue
DB/hw/src/: main.rs  model.rs
DIP/: compile_exp.sh  数字图像处理.md
DIP/NOTE/: 0926.md  1010.md  1017.md  1024.md  第2章作业.md  第三次作业.md  第二次作业.md
DIP/compile_opencv/: compile_opencv.sh  compile_test.sh  test.cpp
DIP/exp1/: README.md
DIP/exp1/1/: bininear.md  custom.cpp  easy.cpp
DIP/exp1/2/: move.cpp  resize.cpp  rotate.cpp  shear.cpp
DIP/exp1/3/: match_shear.txt  registration.cpp
DIP/exp2/1/: power_trans.cpp
DIP/exp2/2/: equalization.cpp
DIP/exp2/3/: conv.cpp
DIP/exp2/4/: f2.cpp  hign_boost.cpp
DIP/exp3/1/: filter.cpp  new_filter.cpp
DIP/exp3/2/: auto_median.cpp  median.cpp
DIP/exp4/1/: straw.cpp  straw_hsv.cpp
DIP/exp4/2/: pyramid.cpp
NET/: 计算机网络.md
NET/NOTE/: 0925.md  1009.md  1023.md  第一次研讨.md
SYS/1/: README.md
SYS/2/: README.md
SYS/3/: README.md
(+17 files in other folders)
